--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -11,7 +11,7 @@
     <header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
 
     <!-- FOOTER -->
-    <footer style="background-color: #00FF00; height: 60px; width: 100%; 
+    <footer style="color: black; background-color: #00FF00; height: 60px; width: 100%; 
     display: flex; justify-content: center; align-items: center; position: fixed; bottom: 0;">
         Best School
     </footer>
